# enigma

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-all.sh  build-icons.sh  build.rs  config.json
.github/workflows/: aur.yml  ci.yml  release.yml
assets/: icon.icns
enigma-cli/: Cargo.toml
enigma-cli/src/: alphabet.rs  cli.rs  encodig.rs  encoding.rs  machine.rs  main.rs  plugboard.rs  state.rs
enigma-cli/tests/: roundtrip.rs
enigma-core/: Cargo.toml  README.md
enigma-core/src/: component.rs  error.rs  lib.rs  machine.rs  reflector.rs  rotor.rs  state.rs  stepping.rs
enigma-core/tests/: pipeline.rs
packaging/: windows.nsi
rotorix-cli/: Cargo.toml
rotorix-cli/src/: cli.rs  machine.rs  main.rs  plugboard.rs  state.rs
rotorix-cli/tests/: roundtrip.rs
rotorix-core/: Cargo.toml  README.md
rotorix-core/src/: error.rs  machine.rs  plugboard.rs  rotor.rs  state.rs
rotorix-core/tests/: pipeline.rs
src/: cli.rs  crypto.rs  gui.rs  main.rs  utils.rs
src/enigma/: enigma.rs  mod.rs  plugboard.rs  reflector.rs  rotor.rs  utils.rs
