[package]
name = "enigma"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
chrono = "0.4.40"
log = "0.4.27"
env_logger = "0.11.8"
openssl = "0.10.71"
base64 = "0.22.1"
lazy_static = "1.5.0"
egui = "0.31.1"
eframe = "0.31.1"