[package]
name = "enigma"
version = "0.5.7"
edition = "2021"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "Modern Enigma MAchine"
license = "MIT"
repository = "https://github.com/umpire274/enigma.git"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
chrono = "0.4.40"
log = "0.4.27"
env_logger = "0.11.8"
openssl = "0.10.72"
base64 = "0.22.1"
lazy_static = "1.5.0"
egui = "0.31.1"
eframe = "0.31.1"
image = "0.25.6"
dirs = "6.0.0"