[package]
name = "enigma"
version = "0.5.8"
edition = "2021"
authors = ["Umpire274 <umpire274@gmail.com>"]
description = "Modern implementation of the Enigma machine in Rust"
license = "MIT"
repository = "https://github.com/umpire274/enigma"

# -----------------------------
[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
openssl = { version = "0.10.72", features = ["vendored"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = "0.4.40"
log = "0.4.27"
env_logger = "0.11.8"
base64 = "0.22.1"
lazy_static = "1.5.0"
egui = "0.31.1"
eframe = "0.31.1"
image = "0.25.6"
dirs = "6.0.0"

# -----------------------------
[build-dependencies]
embed-resource = "2.5.1"

# -----------------------------
[package.metadata.bundle]
name = "Enigma"
identifier = "com.umpire274.enigma"
version = "0.5.7"
icon = ["assets/icon.icns"]
short_description = "Modern Enigma Machine"
long_description = "A Rust implementation of the classic Enigma machine with dynamic rotor generation and cross-platform support."
copyright = "© 2024 Umpire274"
category = "Utility"

# -----------------------------
[profile.release]
opt-level = "z"       # Ottimizzazione per dimensioni ridotte
lto = true            # Link Time Optimization
codegen-units = 1     # Migliore ottimizzazione finale
panic = "abort"       # Riduce dimensione binario se non serve unwinding
strip = true          # Rimuove simboli di debug
