[package]
name = "rotorix-cli"
version = "0.1.0"
edition = "2024"

description = "CLI demo for the rotorix-core library"
license = "MIT"
repository = "https://github.com/umpire274/rotorix"

[dependencies]
rotorix-core = { path = "../rotorix-core" }
clap = { version = "4.5.53", features = ["derive"] }
data-encoding = "2.9.0"

[dev-dependencies]
assert_cmd = "2.1.1"

[[bin]]
name = "rotorix"
path = "src/main.rs"
